# Polygeist-Example

./: .gitmodules  CMakeLists.txt  ControlFlow.c  ExternCFuncCall.c  README.md  SimpleCXXFunc.cc
CompileLibrary/: README.md  Test.c
Tensor/: Test.c
example/: Variadic.cc
example/CompileLibrary/: Lib.mlir  TestAdd.mlir  TestMain.c  flow.sh
example/Tensor/: Test.cc
include/: CMakeLists.txt  dsl.h
include/pgex/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/Transforms/: CMakeLists.txt  MapToDialects.cc  PassDetail.h  Ptr2Tsr.cc  SimplifyDataflow.cc
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/MapToDialects/: tensor_add.cc  tensor_concat.cc  tensor_conv.cc  tensor_load_store.cc  tensor_reshape.cc
test/Ptr2Tsr/: loop.cc  loop_concat.cc  tensor_add.cc  tensor_concat.cc  tensor_conv.cc  tensor_load_store.cc  tensor_reshape.cc
test/SimplifyDataflow/: bufferize.cc  loop.cc  multi-store.cc
tools/: CMakeLists.txt
tools/runner/: CMakeLists.txt  runner.cc
